Added hover effect to style btns

--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,11 @@ body {
   border-radius: 50%;
   border: 1px solid var(--second-background-color);
   cursor: pointer;
+  transition: box-shadow 0.3s;
+}
+.wrapper .style-btns .light-mode:hover,
+.wrapper .style-btns .dark-mode:hover {
+  box-shadow: 0 0 10px var(--second-background-color);
 }
 .wrapper .style-btns .light-mode {
   background-color: rgb(255, 255, 255);
